[gd_scene load_steps=5 format=3 uid="uid://b1doywa5nuo0q"]

[ext_resource type="Script" path="res://scipt/water_dispenser.gd" id="1_4aehj"]
[ext_resource type="PackedScene" uid="uid://b8q8bfdbpjgj1" path="res://models/Water_Tank.glb" id="2_xgbfe"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mdp1v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_g75ce"]

[node name="WaterDispenser" type="Node3D" node_paths=PackedStringArray("labelNode") groups=["water_dispenser"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_4aehj")
labelNode = NodePath("Label3D")

[node name="Water_Tank" parent="." instance=ExtResource("2_xgbfe")]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_mdp1v")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_g75ce")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.68428, 0.729219, 0, -0.729219, 0.68428, 0.0731804, 2.15293, 1.24433)
visible = false
pixel_size = 0.01
text = "press E to pick water"
font_size = 12

[connection signal="body_entered" from="Area3D" to="." method="showInteractionButton"]
[connection signal="body_exited" from="Area3D" to="." method="hideInteractionButton"]
